<resources>
    <string name="app_name">BlockPay</string>
    <string name="blocktrade_server_url">https://blocktrades.us:443</string>
    <string name="bitshare_server_url">https://bitshares.openledger.info</string>
    <string name="bitshares_munich_id">1.2.90200</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_api">{\"id\":1,\"method\":\"call\",\"params\":[1,\"login\",[\"\",\"\"]]}</string>
    <string name="database_api_subscribe">{\"method\":\"call\",\"params\":[1,\"database\",[]],\"id\":2}</string>
    <string name="network_broadcast_api_subscribe">{\"method\":\"call\",\"params\":[1,\"network_broadcast\",[]],\"id\":3}</string>
    <string name="history_api_subscribe">{\"method\":\"call\",\"params\":[1,\"history\",[]],\"id\":4}</string>
    <string name="sharePref_database">database</string>
    <string name="sharePref_network_broadcast">network_broadcast</string>
    <string name="sharePref_history">history</string>
    <string name="subscribe_callback">{\"method\":\"call\",\"params\":[2,\"set_subscribe_callback\",[7,true]],\"id\":5}</string>
    <string name="head_block_number">head_block_number</string>
    <string name="pref_wallet_accounts">wallet_accounts</string>
    <string name="pref_local_transactions">my_local_transactions</string>
    <string name="pref_backup_bin_exist">backup_bin_exist</string>
    <string name="pref_local_transactions_wrt_numbers">my_local_transactions_wrt_numbers</string>
    <string name="folder_name">BlockPay</string>
    <string name="action_settings">Settings</string>
    <string name="smart_coins">SMARTCOINS</string>
    <string name="smart_coins_lowercase">smartcoins</string>
    <string name="zero">0</string>
    <string name="double_zero">00</string>
    <string name="dot">.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="pay_in">Pay in</string>
    <string name="private_key">Private Key</string>
    <string name="txt_agree">Agree</string>
    <string name="txt_paid_id">Paid in</string>
    <string name="txt_cool">COOL!</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_Exchanges">Exchanges</string>
    <string name="txt_Refunds_Returns">Refunds/Returns</string>
    <string name="txt_transactions">Transactions</string>
    <string name="txt_home">Home</string>
    <string name="cancel">Cancel</string>
    <string name="existing_account">Existing Account</string>
    <string name="ok">OK</string>
    <string name="next">NEXT</string>
    <string name="_24_hours">24 Hours</string>
    <string name="_1_week">1 Week</string>
    <string name="_1_month">1 Month</string>
    <string name="_6_month">6 Months</string>
    <string name="_3_months">3 Months</string>
    <string name="_12_months">12 Months</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_todays_loyalty_points">Today\'s Loyalty Points</string>
    <string name="txt_edit">SAVE</string>
    <string name="txt_new_pin">New PIN (6+ digits)</string>
    <string name="txt_new_pin_confirmation">Confirm new PIN (6+ digits)</string>
    <string name="txt_current_pin">Current PIN number</string>
    <string name="title_loading_assets">Loading assets..</string>
    <string name="msg_loading_all_existing_assets">Performing a series of requests in order to get the complete list of all existing assets</string>
    <string name="export_date_range_title">Date range</string>
    <string name="export_type_title">Export formats</string>
    <string name="option_start_date">Start Date</string>
    <string name="option_end_date">End Date</string>
    <string name="option_select_all_dates">Select all</string>
    <string name="format_pdf">PDF</string>
    <string name="format_csv">CSV</string>
</resources>