<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tvOldPIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_current_pin"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etOldPin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edittext_bg"
        android:inputType="number"
        android:maxLength="8"
        android:maxLines="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_new_pin"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etPin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edittext_bg"
        android:inputType="number"
        android:maxLength="8"
        android:maxLines="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_new_pin_confirmation"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etPinConfirmation"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edittext_bg"
        android:inputType="number"
        android:maxLength="8"
        android:maxLines="1"
        android:singleLine="true"/>
    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_edit"/>
</LinearLayout>

