<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="350dp"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_gravity="center"
              android:background="@color/white">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/rgTransactions"
            android:checkedButton="@+id/sound" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb24hours"
                android:checked="true"
                android:text="@string/_24_hours" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb1week"
                android:text="@string/_1_week" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb1month"
                android:text="@string/_1_month" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb3month"
                android:text="@string/_3_months" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb6month"
                android:text="@string/_6_month" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb12month"
                android:text="@string/_12_months" />

        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp">

            <Button
                android:stateListAnimator="@animator/my_animated_button"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/dialog_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:background="@color/pink"
                android:textColor="@color/white"
                android:textSize="13dp"
                android:text="@string/cancel"/>

            <Button
                android:stateListAnimator="@animator/my_animated_button"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/dialog_btn_continue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:background="@color/green"
                android:textColor="@color/white"
                android:textSize="13dp"
                android:text="@string/txt_continue"/>
        </LinearLayout>

    </LinearLayout>
    <android.support.v4.widget.Space android:layout_width="match_parent" android:layout_height="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.7"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="1">
        <TextView
            android:layout_weight="0.1"
            android:id="@+id/tvExistingAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/existing_account"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_gravity="left"
            android:textAlignment="gravity"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            android:background="@color/bottomBarColor"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:id="@+id/tvAppVersion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/bottomBarColor"/>

            <TextView
                android:background="@color/bottomBarColor"
                android:id="@+id/tvBlockNumberHead"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"/>
            <ImageView
                android:id="@+id/ivSocketConnected"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"/>

            <ImageView android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="0.5"
                       android:layout_gravity="center"
                android:visibility="invisible"
                       android:src="@drawable/icon_setting"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
