<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_database_load"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.bitsharesmunich.blockpos.DatabaseLoadActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/blockpay_logo"
        android:scaleType="centerCrop"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:visibility="visible"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView"
        android:indeterminateOnly="false"
        style="@style/Base.Widget.AppCompat.ProgressBar"/>
    <TextView
        android:id="@+id/database_load_title"
        android:text="@string/title_loading_assets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
    <TextView
        android:id="@+id/database_load_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/database_load_title"
        android:text="@string/msg_loading_all_existing_assets"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="18sp" />
    <Button
        android:id="@+id/nextButton"
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
</RelativeLayout>
