<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="5"
    android:orientation="vertical">
    <me.grantland.widget.AutofitTextView
        android:id="@+id/txtScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="10dp"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"
        android:typeface="serif"/>
    <LinearLayout
        android:id="@+id/llSmartCoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llScreen"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/txt_paid_id"
            android:textSize="21dp"/>

        <ImageView
            android:id="@+id/ivCoin"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:src="@drawable/icon_keypad_smartcoins"/>

        <TextView
            android:id="@+id/tvCoinName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:gravity="center"
            android:text="@string/smart_coins_lowercase"
            android:textSize="21dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5">
        <ImageView
            android:id="@+id/ivReward"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_reward"/>
        <TextView
            android:id="@+id/tvRewardStatic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_todays_loyalty_points"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="20dp"
            android:visibility="gone"
            android:typeface="serif"/>
        <TextView
            android:id="@+id/tvReward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRewardStatic"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            android:gravity="center"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:typeface="serif"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/ivMyFable"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@+id/ivReward"
        android:layout_gravity="center"
        android:src="@drawable/icon_merchant"/>
    <TextView
        android:id="@+id/tvMyFable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""/>
    <Button
        android:id="@+id/btnCool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivMyFable"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="#27ae5f"
        android:text="@string/txt_cool"
        android:textColor="@color/white"/>
    <android.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>
</LinearLayout>